# Game-Engine-and-Mario-Game

./: .gitignore  .gitmodules  README.md  unique.txt
Mario_RPG_Remake/: CMakeLists.txt  Mario_RPG_Remake.sln
Mario_RPG_Remake/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Mario_RPG_Remake/Game_Engine/: Game_Engine.vcxproj
Mario_RPG_Remake/Mario_RPG/: Mario_RPG.vcxproj  Mario_RPG.vcxproj.filters
Mario_RPG_Remake/Mario_RPG/src/: MarioRPGApp.cpp  MarioRPGApp.h
Mario_RPG_Remake/Mario_RPG_Engine/: CMakeLists.txt  Mario_RPG_Engine.vcxproj
Mario_RPG_Remake/Mario_RPG_Engine/include/: MarioRPG.h
Mario_RPG_Remake/Mario_RPG_Engine/src/: GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  MarioKeys.h  MarioRPGApp.cpp  MarioRPGApp.h  MarioRPGEvents.cpp  MarioRPGEvents.h  MarioRPGUtils.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
Mario_RPG_Remake/Mario_RPG_Engine/src/GLFWCode/: GLFWimplementation.cpp  GLFWimplementation.h
Mario_RPG_Remake/Mario_RPG_Engine/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Mario_RPG_Remake/Mario_RPG_Game/: CMakeLists.txt  Mario_RPG_Game.vcxproj  main.cpp
Mario_RPG_Remake/glad/: glad.vcxproj
Mario_RPG_Remake/glad/include/glad/: glad.h
Mario_RPG_Remake/glad/src/: glad.c
Mario_RPG_Remake/stbi/: stbi.vcxproj
